# bitpanda-public-api-mcp

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/workflows/: qa.yml
bp_mcp/: auth.py  bitpanda_mcp_server.py  exception_handlers.py  utils.py
bp_mcp/schemas/: __init__.py  assets.py  common.py  errors.py  settings.py  trades.py  transactions.py  wallets.py
ci/docker/: Dockerfile  entrypoint.sh
tests/: conftest.py  ruff.toml  test_auth.py  test_main.py
tests/cassettes/: test_get_asset_by_id.yaml  test_get_asset_not_found.yaml  test_get_bitpanda_asset_wallets.yaml  test_get_bitpanda_asset_wallets_pagination.yaml  test_get_bitpanda_fiat_wallets.yaml  test_get_bitpanda_fiat_wallets_transactions.yaml  test_get_bitpanda_list_crypto_wallets.yaml  test_get_bitpanda_trades.yaml  test_get_list_crypto_transactions.yaml  test_get_transactions.yaml  test_get_transactions_with_filters.yaml  test_get_wallets.yaml  test_get_wallets_pagination.yaml
