[tool.poetry]
name = "bitpanda-mcp-server"
version = "0.1.0"
description = "Bitpanda Public API → MCP server (via fastapi_mcp)"
authors = ["Bitpanda <dev@bitpanda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"

fastapi-mcp = "^0.4.0"
fastapi = "^0.115.2"
uvicorn = {version = "^0.38.0", extras = ["standard"]}
python-dotenv = "^1.1.0"
python-json-logger = "^3.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.14.1"
pre-commit = "4.1.0"
pytest = "8.3.4"
pytest-cov = "6.0.0"
ruff = "0.9.4"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
