[tool.poetry]
name = "bitpanda-mcp-server"
version = "0.1.0"
description = "Bitpanda Public API → MCP server (via fastapi_mcp)"
authors = ["Bitpanda <dev@bitpanda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"

fastmcp = "^2.13.2"
fastapi = "^0.123.0"
python-dotenv = "^1.1.0"
python-json-logger = "^3.3.0"
urllib3 = ">=2.5.0" # vuln fix
uvicorn = "^0.38.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.19.0"
pre-commit = "4.1.0"
pytest = "8.3.4"
pytest-cov = "6.0.0"
ruff = "0.14.7"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
